feat: use new exchange framework
BREAKING CHANGE: using this version will imply migration on connectors